site: fix intro section height on Firefox
Since the media query is already on the .intro-section div, I switched
'min-height' to 'height' there, instead of putting 'height' on the
.intro-section-well (which is table-cell).

--- a/site/app/_assets/stylesheets/pages/homepage.less
+++ b/site/app/_assets/stylesheets/pages/homepage.less
@@ -90,7 +90,7 @@
   }
 
   @media (min-width: 1000px) {
-    min-height: 450px;
+    height: 450px;
     text-align: left;
     background-size: contain;
     background: url("../assets/images/net/net-1x.png") no-repeat right center;
